<?xml version="1.0"?>
<package format="2">
  <name>peer_action_server</name>
  <version>0.0.0</version>
  <description>The package</description>

  <maintainer email="deepak@gmail.com">deepak</maintainer>
  <license>TODO</license>
  <url type="website">https://github.com/abcd</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

</package>
